syntax = "proto3";
option go_package = "./protos";

package raft;

service Raft {
  rpc AppendEntries(AppendEntriesReq) returns (AppendEntriesResp);
  rpc RequestVote(RequestVoteReq) returns (RequestVoteResp);
}

message AppendEntriesReq {
  repeated Entry entries = 1;
  int64 term = 2;
  string leaderId = 3;
  int64 prevLogIndex = 4;
  int64 prevLogTerm = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesResp {
  int64 term = 1;
  bool success = 2;
}

message RequestVoteReq {
  int64 term = 1;
  string candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteResp {
  int64 term = 1;
  bool voteGranted = 2;
}

message Entry {
  bytes data = 1;
  int64 term = 2;
  int64 index = 3;
  uint64 appendedAt = 4;
}